...
    'pear',
    'pineapple',
    'mango',
    'watermelon',
    'cantaloupe',
    'kiwi',
    'cilantro',
    'parsley',
    'italian parsley',
    'basil',
    'fresh basil',
    'mint',
    'dill',
...
